# ruv-FANN

./: .gitignore  Cargo.toml  GEOMETRY_SPECIALIST_REPORT.md  ISSUE_161_COMMENT.md  NEW_ISSUE_ENHANCED_COORDINATOR.md  PERFORMANCE.md
.hive-mind/: hive.db-shm  (+1 more)
cuda-wasm/examples/geometric_langlands_conjecture/: Cargo.toml  build.sh  package.json
cuda-wasm/examples/geometric_langlands_conjecture/demo/: index.html
cuda-wasm/examples/geometric_langlands_conjecture/docs/math/: implementation.md  theory.md
cuda-wasm/examples/geometric_langlands_conjecture/examples/: geometry_demo.rs
cuda-wasm/examples/geometric_langlands_conjecture/src/: lib.rs  main.rs  types.rs
cuda-wasm/examples/geometric_langlands_conjecture/src/algorithms/: mod.rs
cuda-wasm/examples/geometric_langlands_conjecture/src/data/: cache.rs  encoders.rs  features.rs  generators.rs  mod.rs  pipeline.rs  serialization.rs
cuda-wasm/examples/geometric_langlands_conjecture/src/geometry/: bundle.rs  cohomology.rs  invariants.rs  mod.rs  moduli_space.rs  sheaf.rs
cuda-wasm/examples/geometric_langlands_conjecture/src/js/: api.js  worker.js
cuda-wasm/examples/geometric_langlands_conjecture/src/math/: bundle.rs  category.rs  mod.rs  morphism.rs  sheaf.rs  validation.rs
cuda-wasm/examples/geometric_langlands_conjecture/src/neural/: mod.rs
cuda-wasm/examples/geometric_langlands_conjecture/src/physics/: gauge_theory.rs  hitchin_system.rs  mod.rs  s_duality.rs  supersymmetry.rs  wilson_lines.rs
cuda-wasm/examples/geometric_langlands_conjecture/src/symbolic/: mod.rs
cuda-wasm/examples/geometric_langlands_conjecture/src/utils/: mod.rs
cuda-wasm/examples/geometric_langlands_conjecture/tests/: data_integration_test.rs
cuda-wasm/geometric_langlands_conjecture/: Cargo.toml  github_issue.md
cuda-wasm/geometric_langlands_conjecture/research/: application.md  background.md  computational_algorithms.md  implementation.md  key_theorems_proofs.md  mathematical_foundations.md  physics_connections.md  research_summary.md
cuda-wasm/geometric_langlands_conjecture/src/: lib.rs
cuda-wasm/geometric_langlands_conjecture/src/geometry/: mod.rs
cuda-wasm/geometric_langlands_conjecture/src/nn/: feature_encoder.rs  langlands_net.rs  loss_functions.rs  mod.rs  network_builder.rs
cuda-wasm/geometric_langlands_conjecture/src/training/: data_generator.rs  mod.rs
geometric_langlands_conjecture/: CHANGELOG.md  Cargo.toml  ISSUE_UPDATE.md  LICENSE  PERFORMANCE.md  README.md  TESTING_SUMMARY.md  build.rs  geometric_langlands.long-type-16327238975965287308.txt
geometric_langlands_conjecture/.github/workflows/: ci.yml  release.yml
geometric_langlands_conjecture/benches/: comprehensive_benchmarks.rs  langlands_benchmarks.rs
geometric_langlands_conjecture/coordination/: AGENT_ASSIGNMENTS.md  DEPENDENCIES.md  PROGRESS.md  QUEEN_COORDINATION_LOG.md  STATUS.md
geometric_langlands_conjecture/coordination/MESSAGES/: 2025-01-19-12-00-queen-all-project-initialized.md  README.md
geometric_langlands_conjecture/docs/: README.md
geometric_langlands_conjecture/docs/api/: CORE.md
geometric_langlands_conjecture/docs/developer/: ARCHITECTURE.md  GETTING_STARTED.md
geometric_langlands_conjecture/docs/examples/: README.md
geometric_langlands_conjecture/docs/math/: MATHEMATICAL_BACKGROUND.md
geometric_langlands_conjecture/docs/tutorials/: GETTING_STARTED_TUTORIAL.md
geometric_langlands_conjecture/examples/: basic_langlands.rs  core_demo.rs
geometric_langlands_conjecture/scripts/: release.sh
geometric_langlands_conjecture/src/: error.rs  lib.rs
geometric_langlands_conjecture/src/automorphic/: mod.rs
geometric_langlands_conjecture/src/benchmarks/: mod.rs
geometric_langlands_conjecture/src/category/: mod.rs
geometric_langlands_conjecture/src/core/: mod.rs
geometric_langlands_conjecture/src/cuda/: mod.rs
geometric_langlands_conjecture/src/galois/: mod.rs
geometric_langlands_conjecture/src/harmonic/: mod.rs
geometric_langlands_conjecture/src/langlands/: mod.rs
geometric_langlands_conjecture/src/representation/: mod.rs
geometric_langlands_conjecture/src/sheaf/: mod.rs
geometric_langlands_conjecture/src/spectral/: mod.rs
geometric_langlands_conjecture/src/trace/: mod.rs
geometric_langlands_conjecture/src/utils/: mod.rs
geometric_langlands_conjecture/src/wasm/: mod.rs
geometric_langlands_conjecture/tests/: integration_test.rs  mod.rs
geometric_langlands_conjecture/tests/fixtures/: mod.rs
geometric_langlands_conjecture/tests/helpers/: mod.rs
geometric_langlands_conjecture/tests/integration/: correspondence_tests.rs  mod.rs
geometric_langlands_conjecture/tests/property/: mod.rs
geometric_langlands_conjecture/tests/unit/: automorphic_tests.rs  category_tests.rs  core_tests.rs  cuda_tests.rs  error_tests.rs  galois_tests.rs  harmonic_tests.rs  langlands_tests.rs  mod.rs  neural_tests.rs  representation_tests.rs  sheaf_tests.rs  spectral_tests.rs  trace_tests.rs  utils_tests.rs  wasm_tests.rs
geometric_langlands_conjecture/wasm/: Cargo.toml  package.json
geometric_langlands_conjecture/wasm/src/: lib.rs
geometric_langlands_conjecture/wasm/web/: index.html
ruv-swarm/crates/ruv-swarm-enhanced-coordinator/: COMPREHENSIVE_DOCUMENTATION.md  Cargo.toml  README.md
ruv-swarm/crates/ruv-swarm-enhanced-coordinator/benches/: coordinator_benchmarks.rs
ruv-swarm/crates/ruv-swarm-enhanced-coordinator/examples/: basic_coordination.rs  geometric_langlands_demo.rs  github_integration.rs  performance_monitoring.rs  performance_monitoring_demo.rs
ruv-swarm/crates/ruv-swarm-enhanced-coordinator/src/: enhanced_queen_coordinator.rs  lib.rs
ruv-swarm/crates/ruv-swarm-enhanced-coordinator/tests/: enhanced_coordinator_tests.rs
ruv-swarm/crates/ruv-swarm-github/: Cargo.toml  README.md
ruv-swarm/crates/ruv-swarm-github/examples/: queen_coordinator_integration.rs
ruv-swarm/crates/ruv-swarm-github/src/: client.rs  config.rs  error.rs  lib.rs  rate_limiter.rs  reporter.rs
wasm/: Cargo.toml  README.md  build.sh  package.json
wasm/.cargo/: config.toml
wasm/demo/: index.html  worker.js
wasm/src/: lib.rs
(+163 files in other folders)
