[package]
name = "geometric-langlands-wasm"
version = "0.1.0"
edition = "2021"
authors = ["ruv-FANN Contributors"]
description = "WebAssembly bindings for the Geometric Langlands Conjecture implementation"
license = "MIT"
repository = "https://github.com/ruvnet/ruv-FANN"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Parent crate
geometric-langlands = { path = "..", features = ["wasm"] }

# WASM bindings
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "Worker",
  "MessageEvent",
  "MessagePort",
  "Blob",
  "Url",
] }

# Error handling for WASM
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Mathematical libraries optimized for WASM
nalgebra = { version = "0.33", features = ["serde-serialize"], default-features = false }
ndarray = { version = "0.16", features = ["serde"], default-features = false }
num-complex = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

# Optional random number generation for WASM
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "WebGlRenderingContext",
  "Worker",
  "MessageEvent",
  "Blob",
  "Url",
  "FileReader",
  "File",
]

[profile.release]
# Optimize for size in WASM builds
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

# Enable debug symbols for better stack traces
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]