[package]
name = "geometric-langlands-wasm"
version = "0.1.0"
edition = "2021"
authors = ["ruv-FANN Contributors"]
description = "WebAssembly bindings for the Geometric Langlands Conjecture implementation"
license = "MIT"
repository = "https://github.com/ruvnet/ruv-FANN"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM bindings
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
  "console",
  "Performance", 
  "Window",
] }
js-sys = "0.3"

# Error handling for WASM
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Random number generation for WASM
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
# Optimize for size in WASM builds
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]