[package]
name = "geometric-langlands-conjecture"
version = "0.1.0"
edition = "2021"
authors = ["CUDA-WASM Team"]
description = "WASM implementation of Geometric Langlands Conjecture computations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruv-FANN"
keywords = ["mathematics", "langlands", "wasm", "gpu", "computation"]
categories = ["mathematics", "science", "wasm", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"

# Math libraries
num-traits = "0.2"
num-complex = "0.4"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
ndarray = { version = "0.16", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
futures = "0.3"

# Logging
log = "0.4"

# WASM specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "Performance",
    "PerformanceTiming",
] }
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1.0", features = ["color"], optional = true }
getrandom = { version = "0.2", features = ["js"] }

# Non-WASM dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["full"] }
env_logger = "0.11"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"
proptest = "1.4"
approx = "0.5"

[features]
default = []
debug = ["console_error_panic_hook", "console_log"]
profiling = []
simd = []

# Build profiles optimized for WASM
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.wasm-speed]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"

# Package metadata for wasm-pack
[package.metadata.wasm-pack]
"wasm-opt" = ["-O4", "--enable-simd"]

[workspace]
# Empty workspace to avoid conflicts with parent workspace