[package]
name = "ruv-swarm-enhanced-coordinator"
version = "0.1.0"
edition = "2021"
description = "Enhanced Queen Coordinator for intelligent swarm management"
license = "MIT OR Apache-2.0"

[dependencies]
# Core ruv-swarm dependencies
ruv-swarm-core = { path = "../ruv-swarm-core" }

# Async dependencies
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
github-integration = []